improve some syntax